# repo_roller

./: .gitignore  .release-regent.toml  .tech-decisions.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  deny.toml  fix_errors.ps1  fix_template_processing_errors.ps1  mkdocs.yml  release-regent.toml  renovate.json
crates/auth_handler/: Cargo.toml
crates/auth_handler/src/: github_auth_service.rs  lib.rs
crates/config_manager/: Cargo.toml
crates/config_manager/src/: basic_validator.rs  basic_validator_tests.rs  config_manager_trait.rs  configuration_context.rs  configuration_context_tests.rs  errors.rs  errors_tests.rs  github_metadata_provider.rs  github_metadata_provider_tests.rs  github_provider.rs  github_provider_tests.rs  github_template_repository.rs  global_defaults.rs  global_defaults_tests.rs  hierarchy.rs  hierarchy_tests.rs  integration_tests.rs  lib.rs  lib_tests.rs  merged.rs  merged_config.rs  merged_config_tests.rs  merged_tests.rs  merger.rs  merger_ruleset_tests.rs  merger_tests.rs  metadata.rs  metadata_provider.rs  metadata_provider_tests.rs  metadata_tests.rs  organization.rs  organization_settings_manager.rs  organization_settings_manager_tests.rs  organization_tests.rs  overridable.rs  overridable_tests.rs  parsers.rs  parsers_tests.rs  repository_type_config.rs  repository_type_config_tests.rs  (+24 more)
crates/config_manager/src/settings/: actions.rs  actions_tests.rs  branch_protection.rs  branch_protection_tests.rs  custom_property.rs  custom_property_tests.rs  environment.rs  environment_tests.rs  github_app.rs  github_app_tests.rs  label.rs  label_tests.rs  mod.rs  naming.rs  naming_tests.rs  notifications.rs  notifications_tests.rs  permissions.rs  permissions_tests.rs  pull_request.rs  pull_request_tests.rs  push.rs  push_tests.rs  repository.rs  repository_tests.rs  ruleset.rs  ruleset_tests.rs  webhook.rs  webhook_tests.rs
crates/e2e_tests/: Cargo.toml
crates/e2e_tests/src/: container.rs  lib.rs
crates/e2e_tests/tests/: api_endpoints.rs
crates/github_client/: Cargo.toml
crates/github_client/src/: branch_protection.rs  branch_protection_tests.rs  collaborator.rs  collaborator_tests.rs  contents.rs  contents_tests.rs  custom_property_payload.rs  custom_property_payload_tests.rs  environment.rs  environment_detector.rs  environment_detector_tests.rs  environment_tests.rs  errors.rs  errors_tests.rs  installation.rs  installation_tests.rs  label.rs  label_tests.rs  lib.rs  lib_tests.rs  models.rs  models_tests.rs  repository.rs  repository_tests.rs  ruleset.rs  ruleset_tests.rs  team.rs  team_tests.rs  user.rs  user_tests.rs  webhook.rs  webhook_tests.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/examples/: cleanup_orphans.rs
crates/integration_tests/src/: container.rs  fixtures.rs  helpers.rs  lib.rs  main.rs  mock_github.rs  test_runner.rs  utils.rs  utils_tests.rs  verification.rs  verification_tests.rs  visibility_helpers.rs
crates/integration_tests/tests/: cli_template_commands_tests.rs  configuration_hierarchy_tests.rs  configuration_preview_tests.rs  core_scenarios.rs  directory_listing_tests.rs  e2e_containerized.rs  empty_repository_tests.rs  error_handling_tests.rs  event_notification_tests.rs  integration_scenarios.rs  label_webhook_creation_tests.rs  metadata_repository_edge_cases.rs  naming_rules_tests.rs  organization_settings_scenarios.rs  permission_tests.rs  repository_visibility_tests.rs  rest_api_endpoints.rs  ruleset_creation_tests.rs  security_validation_tests.rs  template_configuration_loading_tests.rs  template_default_visibility_tests.rs  template_file_filtering_tests.rs  template_processing_edge_cases.rs  topic_based_discovery_tests.rs  variable_substitution_edge_cases.rs  visibility_policy_enforcement_tests.rs
crates/repo_roller_api/: .dockerignore  Cargo.toml  Dockerfile  README.md
crates/repo_roller_api/src/: errors.rs  errors_tests.rs  handlers.rs  handlers_tests.rs  lib.rs  main.rs  middleware.rs  middleware_tests.rs  routes.rs  routes_tests.rs  server.rs  server_tests.rs  translation.rs  translation_tests.rs
crates/repo_roller_api/src/models/: mod.rs  request.rs  (+3 more)
crates/repo_roller_azure_fn/: Cargo.toml
crates/repo_roller_azure_fn/src/: lib.rs  main.rs
crates/repo_roller_cli/: Cargo.toml  EMPTY_REPOSITORIES.md  MAKE_TEMPLATE.md  TEMPLATE_COMMANDS.md
crates/repo_roller_cli/src/: commands.rs  config.rs  config_tests.rs  errors.rs  errors_tests.rs  lib.rs  main.rs  main_tests.rs
crates/repo_roller_core/: Cargo.toml
crates/repo_roller_core/src/: authentication.rs  authentication_tests.rs  configuration.rs  configuration_tests.rs  content_providers.rs  content_providers_tests.rs  errors.rs  errors_tests.rs  event_metrics.rs  event_metrics_tests.rs  event_publisher.rs  event_publisher_tests.rs  event_secrets.rs  event_secrets_tests.rs  git.rs  git_tests.rs  github.rs  github_auth.rs  github_auth_tests.rs  github_tests.rs  label_manager.rs  label_manager_tests.rs  lib.rs  lib_integration_tests.rs  lib_tests.rs  naming_validator.rs  naming_validator_proptests.rs  naming_validator_tests.rs  permission_audit_logger.rs  permission_audit_logger_tests.rs  permission_manager.rs  permission_manager_tests.rs  permission_workflow.rs  permission_workflow_tests.rs  permissions.rs  permissions_proptests.rs  permissions_tests.rs  policy_engine.rs  policy_engine_tests.rs  repository.rs  (+13 more)
crates/template_engine/: Cargo.toml
crates/template_engine/src/: errors.rs  errors_tests.rs  handlebars_engine.rs  handlebars_proptests.rs  handlebars_tests.rs  lib.rs  lib_tests.rs  multiple_missing_variables_tests.rs
crates/test_cleanup/: Cargo.toml  README.md
crates/test_cleanup/src/: lib.rs  lib_tests.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs  lib_tests.rs
examples/webhook-receiver/rust/: Cargo.toml
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: fuzz_handlebars_render.rs  fuzz_repository_naming_rules_toml.rs  fuzz_toml_label_config.rs  fuzz_validate_naming_rules.rs
tests/templates/test-invalid/: Cargo.toml  config.json
(+425 files in other folders)
