[workspace]
resolver = "2" # Use the latest resolver
members = [
    "crates/repo_roller_core",
    "crates/github_client",
    "crates/template_engine",
    "crates/config_manager",
    "crates/auth_handler",
    "crates/repo_roller_cli",
    "crates/repo_roller_api",
    "crates/repo_roller_mcp",
    "crates/repo_roller_azure_fn",
    "crates/integration_tests",
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/RepoRoller"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
async-trait = "0.1"
octocrab = "0.47"
thiserror = "2.0"
tracing = "0.1"
url = "2.5.4"
