[workspace]
resolver = "2" # Use the latest resolver
members = [
    "crates/repo_roller_core",
    "crates/github_client",
    "crates/template_engine",
    "crates/config_manager",
    "crates/auth_handler",
    "crates/repo_roller_cli",
    "crates/repo_roller_api",
    "crates/repo_roller_mcp",
    "crates/repo_roller_azure_fn",
    "crates/integration_tests",
    "crates/e2e_tests",
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/RepoRoller"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
async-trait = "0.1"
octocrab = "0.47"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
url = "2.5.4"

# HTTP and API dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing dependencies
hyper = "1.0"
