[workspace]
resolver = "2" # Use the latest resolver
members = [
    "crates/repo_roller_core",
    "crates/github_client",
    "crates/template_engine",
    "crates/config_manager",
    "crates/auth_handler",
    "crates/repo_roller_cli",
    "crates/repo_roller_api",
    "crates/integration_tests",
    "crates/e2e_tests",
    "crates/test_utils",
    "crates/test_cleanup",
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/RepoRoller"
version = "0.8.2"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
# Core utilities
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
octocrab = "0.51"
regex = "1"
secrecy = "0.10"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
url = "2.5.4"
walkdir = "2.5"

# HTTP and API dependencies
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
prometheus = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = "0.5"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing dependencies
hyper = "1.0"
proptest = "1"
serial_test = "0.9"
wiremock = "=0.6.5"
