[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "auth_handler"
repository.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
github_client = { path = "../github_client" }
secrecy.workspace = true
thiserror.workspace = true
