[package]
authors.workspace = true
edition = "2021"
license-file.workspace = true
name = "config_manager"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
github_client = { path = "../github_client" }
jsonschema = "0.17"
octocrab = "0.34"
schemars = { version = "0.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.9"

[dev-dependencies]
serde_json = "=1.0.145"
tempfile = "=3.23.0"
tokio = { version = "=1.45.1", features = ["macros", "rt"] }
