[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "config_manager"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
github_client = { path = "../github_client" }
jsonschema = "0.33"
octocrab.workspace = true
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror = { workspace = true }
toml = "0.9"
tracing = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "=3.23.0"
tokio = { version = "=1.48.0", features = ["macros", "rt"] }
