[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "config_manager"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64.workspace = true
chrono.workspace = true
github_client = { path = "../github_client" }
jsonschema = "0.46"
octocrab.workspace = true
schemars = { version = "1.2", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
template_engine = { path = "../template_engine" }
thiserror = { workspace = true }
toml.workspace = true
tracing = { workspace = true }
url.workspace = true

[dev-dependencies]
futures = "=0.3.32"
serde_json.workspace = true
tempfile = "=3.27.0"
tokio = { workspace = true }
