[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
auth_handler = { path = "../auth_handler" }
github_client = { path = "../github_client" }
test_utils = { path = "../test_utils" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
futures-util = "0.3"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Docker container testing
testcontainers = "0.23"
bollard = "0.17"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
