[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
auth_handler = { path = "../auth_handler" }
github_client = { path = "../github_client" }
test_utils = { path = "../test_utils" }

# Async runtime
tokio.workspace = true
futures-util = "0.3"

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time utilities
chrono.workspace = true

# HTTP client
reqwest.workspace = true

# Docker container testing
testcontainers = "0.27"
bollard = "0.20"

# Utilities
uuid.workspace = true
