[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "github_client"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
base64 = "0.22"
http = "1.2"
jsonwebtoken = "9.3"
octocrab.workspace = true
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
wiremock = "=0.6.5"
tokio = { version = "=1.48.0", features = [
    "macros",
    "rt-multi-thread",
] } # Ensure test runtime features
serde_json.workspace = true # For constructing mock responses
rsa = "=0.9.8"
rand = "=0.8.5"
