[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "github_client"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
base64.workspace = true
http = "1.4"
jsonwebtoken.workspace = true
octocrab.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
wiremock = "=0.6.5"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] } # Ensure test runtime features
serde_json.workspace = true # For constructing mock responses
ctor = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
