[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
auth_handler = { path = "../auth_handler" }
repo_roller_cli = { path = "../repo_roller_cli" }
repo_roller_core = { path = "../repo_roller_core" }
github_client = { path = "../github_client" }
template_engine = { path = "../template_engine" }
config_manager = { path = "../config_manager" }
test_utils = { path = "../test_utils" }
test_cleanup = { path = "../test_cleanup" }
tokio.workspace = true
tempfile.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
wiremock.workspace = true
prometheus.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio-test = "=0.4.4"
