[package]
name = "repo_roller_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# repo_roller_core = { path = "../repo_roller_core" } # Will be needed later
# axum = "0.7" # Example web framework, might be needed later
