[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "repo_roller_api"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Business logic dependencies
repo_roller_core = { path = "../repo_roller_core" }
config_manager = { path = "../config_manager" }
auth_handler = { path = "../auth_handler" }
github_client = { path = "../github_client" }
template_engine = { path = "../template_engine" }

# HTTP framework
axum = { workspace = true, features = ["macros"] }
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace", "timeout"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Time handling
chrono.workspace = true

# Metrics
prometheus = "0.13"

# UUID for request IDs
uuid.workspace = true

[dev-dependencies]
http-body-util = "=0.1.3"
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true, features = ["full"] }

[[bin]]
name = "repo_roller_api"
path = "src/main.rs"
