[package]
name = "repo_roller_azure_fn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# repo_roller_api = { path = "../repo_roller_api" } # Will be needed later
# azure_functions = "0.22" # Example Azure Functions crate
