[package]
authors.workspace = true
edition = "2021"
license-file.workspace = true
name = "repo_roller_azure_fn"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# repo_roller_api = { path = "../repo_roller_api" } # Will be needed later
# azure_functions = "0.22" # Example Azure Functions crate
