[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "repo_roller_cli"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
auth_handler = { path = "../auth_handler" }
chrono.workspace = true
clap.workspace = true
colored = "2.1"
config_manager = { path = "../config_manager" }
github_client = { path = "../github_client" }
keyring = { version = "3.6.2", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
octocrab.workspace = true
prometheus.workspace = true
regex.workspace = true
repo_roller_core = { path = "../repo_roller_core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
template_engine = { path = "../template_engine" }
thiserror = { workspace = true }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
