[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "repo_roller_core"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth_handler = { path = "../auth_handler" }
chrono = { version = "0.4", features = ["serde"] }
config_manager = { path = "../config_manager" }
git2 = "0.20"
github_client = { path = "../github_client" }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
std_prelude = "0.2.12"
temp-dir = "0.1.16"
template_engine = { path = "../template_engine" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
url.workspace = true
uuid = { version = "1.0", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
async-trait.workspace = true
