[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "repo_roller_core"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
auth_handler = { path = "../auth_handler" }
chrono.workspace = true
config_manager = { path = "../config_manager" }
git2 = { version = "0.21", features = ["https", "vendored-openssl"] }
github_client = { path = "../github_client" }
hex.workspace = true
hmac.workspace = true
prometheus.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
std_prelude = "0.2.12"
temp-dir = "0.2.0"
template_engine = { path = "../template_engine" }
thiserror = { workspace = true }
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
octocrab.workspace = true
proptest.workspace = true
tracing-test = "0.2"
wiremock.workspace = true
