[package]
authors.workspace = true
edition = "2021"
license-file.workspace = true
name = "template_engine"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
github_client = { path = "../github_client" }
glob = "0.3.2"
handlebars = "6.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tempfile = "3.0"
thiserror = { workspace = true }
walkdir = "2.5"
