[package]
authors.workspace = true
edition = "2021"
license.workspace = true
name = "template_engine"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
glob = "0.3.2"
handlebars = "6.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror = { workspace = true }
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
