[package]
name = "webhook-receiver"
version = "0.1.0"
edition = "2021"
description = "RepoRoller webhook receiver example (Rust / axum)"

[[bin]]
name = "webhook-receiver"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
